# rust-wasm-gameboy

./: .gitignore  README.md  notes.txt  package-lock.json  package.json
gameboy/: Cargo.toml  LICENSE_MIT  README.md
gameboy/src/: cartridge.rs  cpu.rs  joypad.rs  lib.rs  main.rs  memory.rs  ppu.rs  save.rs  state.rs
gameboy/tests/: .gitignore  README.MD
public/: index.html  manifest.json
src/: App.css  App.tsx
src/components/: GameSelect.tsx
src/helpers/: base64.ts  db.tsx  types.ts
src/styles/: GameSelect.css
test-rom/: .gitignore  Cargo.toml  test_rom.gb
test-rom/src/: main.rs
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
