[package]
name = "gameboy"
version = "0.1.0"
authors = ["Andreas <andreas.just.petersen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.63"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'ImageData',
    'console',
    'Storage',
    'Performance',
    'PerformanceTiming'
]

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.dev]
overflow-checks = false
